@@ -1,29 +1,26 @@
 package com.company;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class Conventer <T> {
-    public T convertedList;
-    public Conventer(T convertedList) {
-        this.convertedList = convertedList;
-    }
+    private List<T> convertedList;
 
-    public List<T> numericArrayToList(T convertedList) {
-        List<T> arr = new ArrayList();
-        arr.add(convertedList);
-        arr = Arrays.asList(convertedList);
-        return arr;
+    public void setArrayToList(T[] inputArray) {
+        List<T[]> arr = new ArrayList(List.of(inputArray));
+        convertedList = (List<T>) arr;
+       // System.out.println("Print from metod setArratToList " +convertedList);
+
         }
 
-    public T getConvertedList() {
-        return convertedList;
-    }
 
     public void printList() {
-            System.out.println("Print from Class Conventer metod" + Arrays.toString((Object[]) convertedList));
+
+        System.out.println("Print from Class Conventer metod" + convertedList);
         }
 
+    public List<T> getConvertedList() {
+        return convertedList;
+    }
 
 
 }
